--- a/package.json
+++ b/package.json
@@ -16,5 +16,22 @@
   "bugs": {
     "url": "https://github.com/HugoRoca/app-notes-v.2.0/issues"
   },
-  "homepage": "https://github.com/HugoRoca/app-notes-v.2.0#readme"
+  "homepage": "https://github.com/HugoRoca/app-notes-v.2.0#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.0.0",
+    "express-mysql-session": "^2.1.4",
+    "express-session": "^1.17.1",
+    "express-validator": "^6.6.0",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "timeago.js": "^4.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
